--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@types/node": "12.12.11",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.1.3",
     "typescript": "3.7.2"
   },
   "scripts": {
@@ -32,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.5"
+  },
+  "proxy": "https://jsonplaceholder.typicode.com"
 }
