--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
     "axios": "^0.19.0",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
